[package]
name = "saf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = ">=1.10.39"
solana-address-lookup-table-program = ">=1.10.39"
thiserror = "1.0.37"
saf-macros = { path = "../saf-macros" }


[dev-dependencies]
tokio = { version = "1.22.0", features = ["full"] }