[package]
name = "test-program"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
solana-program-test = "1.10.39"
firewall = { path = "../firewall" }

[dependencies]
solana-program = "1.10.39"
thiserror = "1.0.37"